# linguafranca

./: .gitignore  .mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: push.yml
linguafranca/: __init__.py  __main__.py  commands.py  commands_compute.py  commands_schema.py  commands_table.py  commands_user.py  lang.py  lang_python.py  lang_rust.py  lang_typescript.py  protocol.py  types.py  types_compute.py  types_schema.py  types_table.py  types_user.py
reservoirdb_protocol/: compute-commands.yml  compute.yml  frontend.yml  interfaces.yml  protocol.yml  role-commands.yml  role.yml  schema-commands.yml  schema.yml  table-commands.yml  table.yml
static/python/: pyproject.toml
static/rust/: Cargo.toml
static/rust/src/: lib.rs
static/typescript/: package-lock.json  package.json
