[tool.poetry]
name = "linguafranca"
version = "0.1.0"
description = ""
authors = [ "Ruan Pearce-Authers <ruan@reservoirdb.com>" ]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
yapf = "^0.30.0"

[build-system]
requires = [ "poetry-core >= 1.0.0" ]
build-backend = "poetry.core.masonry.api"
