[tool.poetry]
name = "linguafranca"
version = "0.1.0"
description = ""
authors = [ "Ruan Pearce-Authers <ruan@reservoirdb.com>" ]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"
dacite = "^1.6.0"
pyparsing = "^2.4.7"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
yapf = "^0.31.0"

[build-system]
requires = [ "poetry-core >= 1.0.0" ]
build-backend = "poetry.core.masonry.api"
